#
# Copyright (C) 2011 openlava foundation
#

INCLUDES = -I../

noinst_LIBRARIES = liblsfint.a

liblsfint_a_SOURCES = admin.c cmdtime.c jidx.c lsftcl.c resreq.c timers.c wait.c \
           bitset.c conf.c list.c misc.c userok.c window.c \
           callex.c daemon.c listset.c resourcecmd.c testbitset.c vector.c \
           bitset.h intlib.h intlibout.h jidx.h list.h listset.h  \
           lsftcl.h resreq.h tokdefs.h vector.h yparse.h listerr.def lsbitseterr.def
